# r710_fc

./: dune-project  package.json
esy.lock/: index.json
r710_fc/: dune  fan_control.ml  os_sensors.ml  os_sensors.mli  r710_fc.ml  r710_fc.mli
service/: fan-control.service  install.sh
